--- a/domain.html
+++ b/domain.html
@@ -64,7 +64,7 @@
     <!-- Over Viwe section started here  -->
     <section>
         <div class="container text-center my-4">
-            <h3>Software Development.</h3>
+            <h3>Domain Hosting.</h3>
             <hr class="line bg-dark">
 
             <div class="jumbotron">
@@ -115,7 +115,7 @@
 
     <!-- Software Highlights section started here  -->
 
-    <section>
+    <!-- <section>
         <div class="container text-center my-4">
             <h3>Software Highlights</h3>
             <div class="container text-center my-4 conbor">
@@ -167,13 +167,13 @@
 
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Buying section started here  -->
 
     <section>
         <div class="container text-center automr">
-            <h3>You can buy the software Now !</h3>
+            <h3>You can buy the Domain Hosting Now !</h3>
             <a href="https://microintelligence11.github.io/microintelligence.github.io/"><button type="button"
                     class="btn btn-outline-dark my-3">Please Click For Buy Software</button></a>
         </div>
