--- a/ecommerce.html
+++ b/ecommerce.html
@@ -64,7 +64,7 @@
     <!-- Over Viwe section started here  -->
     <section>
         <div class="container text-center my-4">
-            <h3>Software Development.</h3>
+            <h3>E-commerce Development.</h3>
             <hr class="line bg-dark">
 
             <div class="jumbotron">
@@ -117,7 +117,7 @@
 
     <section>
         <div class="container text-center my-4">
-            <h3>Software Highlights</h3>
+            <h3>E-commerce Development Highlights</h3>
             <div class="container text-center my-4 conbor">
                 <div id="carouselExampleCaptions" class="carousel slide consol" data-ride="carousel">
                     <ol class="carousel-indicators">
@@ -173,7 +173,7 @@
 
     <section>
         <div class="container text-center automr">
-            <h3>You can buy the software Now !</h3>
+            <h3>You can buy the E-commerce Website Now !</h3>
             <a href="https://microintelligence11.github.io/microintelligence.github.io/"><button type="button"
                     class="btn btn-outline-dark my-3">Please Click For Buy Software</button></a>
         </div>
