--- a/web_development.html
+++ b/web_development.html
@@ -64,7 +64,7 @@
     <!-- Over Viwe section started here  -->
     <section>
         <div class="container text-center my-4">
-            <h3>Software Development.</h3>
+            <h3>web Development.</h3>
             <hr class="line bg-dark">
 
             <div class="jumbotron">
@@ -117,7 +117,7 @@
 
     <section>
         <div class="container text-center my-4">
-            <h3>Software Highlights</h3>
+            <h3>Web Development Highlights</h3>
             <div class="container text-center my-4 conbor">
                 <div id="carouselExampleCaptions" class="carousel slide consol" data-ride="carousel">
                     <ol class="carousel-indicators">
@@ -173,7 +173,7 @@
 
     <section>
         <div class="container text-center automr">
-            <h3>You can buy the software Now !</h3>
+            <h3>You can buy the Website Now !</h3>
             <a href="https://microintelligence11.github.io/microintelligence.github.io/"><button type="button"
                     class="btn btn-outline-dark my-3">Please Click For Buy Software</button></a>
         </div>
@@ -191,10 +191,10 @@
                             alt="facebook" class="socialimg"></a>
                     <a href="https://www.instagram.com/_microintelligence_/" class="sociallink"><img src="instagram.png"
                             alt="instagram" class="socialimg"></a>
-                    <a href="https://twitter.com/mic_pvt_ltd" class="sociallink"><img src="twitter.png"
-                            alt="twitter" class="socialimg"></a>
-                    <a href="https://g.page/microintelligence" class="sociallink"><img src="google.png"
-                            alt="google" class="socialimg"></a>
+                    <a href="https://twitter.com/mic_pvt_ltd" class="sociallink"><img src="twitter.png" alt="twitter"
+                            class="socialimg"></a>
+                    <a href="https://g.page/microintelligence" class="sociallink"><img src="google.png" alt="google"
+                            class="socialimg"></a>
 
                 </div>
                 <div class="col-lg-4 col-md-4 col-12 my-4">
