--- a/blog.html
+++ b/blog.html
@@ -53,7 +53,7 @@
 
                     <li class="nav-item active">
                         <a class="nav-link"
-                            href="https://docs.google.com/forms/d/e/1FAIpQLSej6k2AUol6Xstj7qhRpala0oGrjjeujyxFvQM8abSmEYensA/viewform">Contact
+                            href="https://forms.gle/NRxAkxeEnMGFsGyN7">Contact
                             US</a>
                     </li>
 
@@ -174,7 +174,7 @@
     <section>
         <div class="container text-center automr">
             <h3>You can buy the Blog Website Now !</h3>
-            <a href="https://microintelligence11.github.io/microintelligence.github.io/"><button type="button"
+            <a href="https://forms.gle/yPHWh6E1sabREQ4k9"><button type="button"
                     class="btn btn-outline-dark my-3">Please Click For Buy Software</button></a>
         </div>
     </section>
