--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
                     </li>
 
                     <li class="nav-item active">
-                        <a class="nav-link"
-                            href="https://forms.gle/NRxAkxeEnMGFsGyN7">Contact
+                        <a class="nav-link" href="https://forms.gle/NRxAkxeEnMGFsGyN7">Contact
                             US</a>
                     </li>
 
@@ -68,18 +67,15 @@
             <hr class="line bg-dark">
 
             <div class="jumbotron">
-                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati iure suscipit, rerum
-                    maxime, asperiores voluptates pariatur amet sit doloremque at, sunt a aliquid laboriosam itaque
-                    minus! Eaque est accusamus repellat dolorem repellendus, corrupti esse fugiat. Ad explicabo
-                    repellendus quaerat, quis quisquam et eveniet sequi sed quae? Expedita vel, dicta eum maiores
-                    nesciunt nisi, neque, rem dolorem officia harum magnam explicabo ipsum officiis atque! Beatae
-                    voluptate non quam impedit cumque consequatur incidunt ipsa omnis repudiandae numquam aut expedita
-                    voluptatibus nam modi, placeat commodi, pariatur molestias aliquid unde obcaecati deserunt qui
-                    asperiores perspiciatis quae. Mollitia aut consequuntur, fugit dolorem dolor pariatur consectetur
-                    minima ad ratione quas? Consectetur odio alias numquam deserunt culpa dolore rem temporibus
-                    voluptatem suscipit eveniet, reiciendis tempore obcaecati reprehenderit recusandae error delectus
-                    fugit corporis minus. Quis animi, alias non molestias deleniti excepturi beatae ad expedita sit
-                    cumque harum vitae quibusdam magnam quo dolore repellat voluptate quos earum qui illum.</p>
+                <p class="lead">Software is the very important and useful toll to the help to manage the business
+                    activity. In the current situation software is need to any type of business and industry. software
+                    save the many time and it help to crate work effectively and efficiancy. This is the technolog time
+                    so if you don't have a powerful technology so you are not survive in market with easily. We have
+                    provide many type of software for solving your business problem like - Business software, College
+                    fees management softwar, School fees management software, library management software, complete
+                    business management software, Employess data management software, Employess Attendence management
+                    software, Employess Salary management Software, Studente Attendence management Software, Costum
+                    software according your need.</p>
             </div>
         </div>
     </section>
@@ -93,18 +89,18 @@
                     <div class="row">
                         <div class="col-lg-4 col-md-4 col-12">
                             <img src="benefit.png" alt="benefit" class="img-fluid imggg">
-                            <h5>This is first banefit</h5>
-                            <p>by fulfilling all requests through an intuitive interface</p>
+                            <h5>For Save Time</h5>
+                            <p>If you use the our software in your business so you can save your very important business time.</p>
                         </div>
                         <div class="col-lg-4 col-md-4 col-12">
                             <img src="benefit.png" alt="benefit" class="img-fluid imggg">
-                            <h5> This is Second banefit</h5>
-                            <p> with accurate information, speedy process execution, and no more duplicated effort</p>
+                            <h5>For Boost Business</h5>
+                            <p>Software is help to boosting your business. if you use our business software so you can definitely bossting your business easily</p>
                         </div>
                         <div class="col-lg-4 col-md-4 col-12">
                             <img src="benefit.png" alt="benefit" class="img-fluid imggg">
-                            <h5>This is threed banefit</h5>
-                            <p>by publishing service levels and assessing demand for services, costs, and improvements
+                            <h5>For Save Money </h5>
+                            <p>If you use the our software in your business so you can save your very important and valueable money.
                             </p>
                         </div>
                     </div>
@@ -174,8 +170,8 @@
     <section>
         <div class="container text-center automr">
             <h3>You can buy the software Now !</h3>
-            <a href="https://forms.gle/yPHWh6E1sabREQ4k9"><button type="button"
-                    class="btn btn-outline-dark my-3">Please Click For Buy Software</button></a>
+            <a href="https://forms.gle/yPHWh6E1sabREQ4k9"><button type="button" class="btn btn-outline-dark my-3">Please
+                    Click For Buy Software</button></a>
         </div>
     </section>
 
@@ -191,10 +187,10 @@
                             alt="facebook" class="socialimg"></a>
                     <a href="https://www.instagram.com/_microintelligence_/" class="sociallink"><img src="instagram.png"
                             alt="instagram" class="socialimg"></a>
-                    <a href="https://twitter.com/mic_pvt_ltd" class="sociallink"><img src="twitter.png"
-                            alt="twitter" class="socialimg"></a>
-                    <a href="https://g.page/microintelligence" class="sociallink"><img src="google.png"
-                            alt="google" class="socialimg"></a>
+                    <a href="https://twitter.com/mic_pvt_ltd" class="sociallink"><img src="twitter.png" alt="twitter"
+                            class="socialimg"></a>
+                    <a href="https://g.page/microintelligence" class="sociallink"><img src="google.png" alt="google"
+                            class="socialimg"></a>
 
                 </div>
                 <div class="col-lg-4 col-md-4 col-12 my-4">
@@ -217,7 +213,7 @@
             </div>
         </div>
     </section>
-    
+
 
 
     <!-- footer started here  -->
