--- a/web_development.html
+++ b/web_development.html
@@ -52,8 +52,7 @@
                     </li>
 
                     <li class="nav-item active">
-                        <a class="nav-link"
-                            href="https://forms.gle/NRxAkxeEnMGFsGyN7">Contact
+                        <a class="nav-link" href="https://forms.gle/NRxAkxeEnMGFsGyN7">Contact
                             US</a>
                     </li>
 
@@ -68,18 +67,14 @@
             <hr class="line bg-dark">
 
             <div class="jumbotron">
-                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati iure suscipit, rerum
-                    maxime, asperiores voluptates pariatur amet sit doloremque at, sunt a aliquid laboriosam itaque
-                    minus! Eaque est accusamus repellat dolorem repellendus, corrupti esse fugiat. Ad explicabo
-                    repellendus quaerat, quis quisquam et eveniet sequi sed quae? Expedita vel, dicta eum maiores
-                    nesciunt nisi, neque, rem dolorem officia harum magnam explicabo ipsum officiis atque! Beatae
-                    voluptate non quam impedit cumque consequatur incidunt ipsa omnis repudiandae numquam aut expedita
-                    voluptatibus nam modi, placeat commodi, pariatur molestias aliquid unde obcaecati deserunt qui
-                    asperiores perspiciatis quae. Mollitia aut consequuntur, fugit dolorem dolor pariatur consectetur
-                    minima ad ratione quas? Consectetur odio alias numquam deserunt culpa dolore rem temporibus
-                    voluptatem suscipit eveniet, reiciendis tempore obcaecati reprehenderit recusandae error delectus
-                    fugit corporis minus. Quis animi, alias non molestias deleniti excepturi beatae ad expedita sit
-                    cumque harum vitae quibusdam magnam quo dolore repellat voluptate quos earum qui illum.</p>
+                <p class="lead">Website is the very important and powerful for the small, medium & large business and
+                    many large inter-national and national companies use the groups of website. they know the importance
+                    of website so they use the group of websites for give the better quality to the her customers.
+                    Through the website you show the your products and services in your customers in easily and
+                    customers contect with you very fast & you find new and genuine customer. website run basically
+                    three language - 1. HTML , 2. CSS, 3. JavaScript. we are use the in this three language.we are
+                    create the very beautiful, responsive and user friendly website. so if
+                    you want to build website with one month free web hosting so please are Contact us. </p>
             </div>
         </div>
     </section>
@@ -93,18 +88,21 @@
                     <div class="row">
                         <div class="col-lg-4 col-md-4 col-12">
                             <img src="benefit.png" alt="benefit" class="img-fluid imggg">
-                            <h5>This is first banefit</h5>
-                            <p>by fulfilling all requests through an intuitive interface</p>
+                            <h5>Increased Sales.</h5>
+                            <p>When owning a business exposure is key to attracting customers. An effective Website with
+                                great content increases the probability for increased sales.</p>
                         </div>
                         <div class="col-lg-4 col-md-4 col-12">
                             <img src="benefit.png" alt="benefit" class="img-fluid imggg">
-                            <h5> This is Second banefit</h5>
-                            <p> with accurate information, speedy process execution, and no more duplicated effort</p>
+                            <h5> Build Customer Base. </h5>
+                            <p> Consumer communication via your Website can help you build your customer base.
+                                Populating a list of consumer contacts is gold to any company.</p>
                         </div>
                         <div class="col-lg-4 col-md-4 col-12">
                             <img src="benefit.png" alt="benefit" class="img-fluid imggg">
-                            <h5>This is threed banefit</h5>
-                            <p>by publishing service levels and assessing demand for services, costs, and improvements
+                            <h5>Open 24/7.</h5>
+                            <p> Unlike a brick- and- mortar business that operates 9- to- 5, a website never closes
+                                shop. It is open 24/7, even on holidays.
                             </p>
                         </div>
                     </div>
@@ -174,8 +172,8 @@
     <section>
         <div class="container text-center automr">
             <h3>You can buy the Website Now !</h3>
-            <a href="https://forms.gle/yPHWh6E1sabREQ4k9"><button type="button"
-                    class="btn btn-outline-dark my-3">Please Click For Buy Software</button></a>
+            <a href="https://forms.gle/yPHWh6E1sabREQ4k9"><button type="button" class="btn btn-outline-dark my-3">Please
+                    Click For Buy Software</button></a>
         </div>
     </section>
 
