--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@500&display=swap" rel="stylesheet">
 
     <title>Services Catalog - Microintelligence</title>
 </head>
@@ -90,17 +90,20 @@
                         <div class="col-lg-4 col-md-4 col-12">
                             <img src="benefit.png" alt="benefit" class="img-fluid imggg">
                             <h5>For Save Time</h5>
-                            <p>If you use the our software in your business so you can save your very important business time.</p>
+                            <p>If you use the our software in your business so you can save your very important business
+                                time.</p>
                         </div>
                         <div class="col-lg-4 col-md-4 col-12">
                             <img src="benefit.png" alt="benefit" class="img-fluid imggg">
                             <h5>For Boost Business</h5>
-                            <p>Software is help to boosting your business. if you use our business software so you can definitely bossting your business easily</p>
+                            <p>Software is help to boosting your business. if you use our business software so you can
+                                definitely bossting your business easily</p>
                         </div>
                         <div class="col-lg-4 col-md-4 col-12">
                             <img src="benefit.png" alt="benefit" class="img-fluid imggg">
                             <h5>For Save Money </h5>
-                            <p>If you use the our software in your business so you can save your very important and valueable money.
+                            <p>If you use the our software in your business so you can save your very important and
+                                valueable money.
                             </p>
                         </div>
                     </div>
@@ -111,7 +114,7 @@
 
     <!-- Software Highlights section started here  -->
 
-    <section>
+    <!-- <section>
         <div class="container text-center my-4">
             <h3>Software Highlights</h3>
             <div class="container text-center my-4 conbor">
@@ -123,8 +126,8 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <a href="https://microintelligence11.github.io/microintelligence.github.io/"><img
-                                    src="Capture.PNG" class="img-fluid conimg" alt="consol"></a>
+                            <a href="https://microintelligence11.github.io/samplewbsite_1/"><img
+                                    src="smple_img1.PNG" class="img-fluid conimg" alt="consol"></a>
                             <div class="carousel-caption d-none d-md-block">
                                 <h2>
                                     <p class="prcolor">Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
@@ -132,8 +135,8 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <a href="https://microintelligence11.github.io/microintelligence.github.io/"> <img
-                                    src="Capture.PNG" class="img-fluid conimg" alt="consol"></a>
+                            <a href="https://microintelligence11.github.io/samplewbsite_1/"> <img
+                                    src="smple_img2.PNG" class="img-fluid conimg" alt="consol"></a>
                             <div class="carousel-caption d-none d-md-block">
                                 <h2>
                                     <p class="prcolor">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -141,12 +144,21 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <a href="https://microintelligence11.github.io/microintelligence.github.io/"> <img
-                                    src="Capture.PNG" class="img-fluid conimg" alt="consol"></a>
+                            <a href="https://microintelligence11.github.io/samplewbsite_1/"> <img
+                                    src="smple_img3.PNG" class="img-fluid conimg" alt="consol"></a>
                             <div class="carousel-caption d-none d-md-block">
                                 <h2>
                                     <p class="prcolor">Praesent commodo cursus magna, vel scelerisque nisl consectetur.
                                     </p>
+                                </h2>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <a href="https://microintelligence11.github.io/samplewbsite_1/"> <img
+                                    src="smple_img4.PNG" class="img-fluid conimg" alt="consol"></a>
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>
+                                    <p class="prcolor">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                                 </h2>
                             </div>
                         </div>
@@ -163,7 +175,7 @@
 
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Buying section started here  -->
 
