--- a/web_app.html
+++ b/web_app.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@500&display=swap" rel="stylesheet">
 
     <title>Services Catalog - Microintelligence</title>
 </head>
@@ -68,18 +68,7 @@
             <hr class="line bg-dark">
 
             <div class="jumbotron">
-                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati iure suscipit, rerum
-                    maxime, asperiores voluptates pariatur amet sit doloremque at, sunt a aliquid laboriosam itaque
-                    minus! Eaque est accusamus repellat dolorem repellendus, corrupti esse fugiat. Ad explicabo
-                    repellendus quaerat, quis quisquam et eveniet sequi sed quae? Expedita vel, dicta eum maiores
-                    nesciunt nisi, neque, rem dolorem officia harum magnam explicabo ipsum officiis atque! Beatae
-                    voluptate non quam impedit cumque consequatur incidunt ipsa omnis repudiandae numquam aut expedita
-                    voluptatibus nam modi, placeat commodi, pariatur molestias aliquid unde obcaecati deserunt qui
-                    asperiores perspiciatis quae. Mollitia aut consequuntur, fugit dolorem dolor pariatur consectetur
-                    minima ad ratione quas? Consectetur odio alias numquam deserunt culpa dolore rem temporibus
-                    voluptatem suscipit eveniet, reiciendis tempore obcaecati reprehenderit recusandae error delectus
-                    fugit corporis minus. Quis animi, alias non molestias deleniti excepturi beatae ad expedita sit
-                    cumque harum vitae quibusdam magnam quo dolore repellat voluptate quos earum qui illum.</p>
+                <p class="lead">A web application (or web app) is an application software that runs on a web server, unlike computer-based software programs that are stored locally on the Operating System (OS) of the device. Web applications are accessed by the user through a web browser with an active internet connection. These applications are programmed using a client–server modeled structure—the user ("client") is provided services through an off-site server that is hosted by a third-party. So if you need a web application software with affordable price Please Contact US.</p>
             </div>
         </div>
     </section>
@@ -115,7 +104,7 @@
 
     <!-- Software Highlights section started here  -->
 
-    <section>
+    <!-- <section>
         <div class="container text-center my-4">
             <h3>Web Applications Development Highlights</h3>
             <div class="container text-center my-4 conbor">
@@ -167,7 +156,7 @@
 
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Buying section started here  -->
 
