--- a/web_development.html
+++ b/web_development.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@500&display=swap" rel="stylesheet">
 
     <title>Services Catalog - Microintelligence</title>
 </head>
@@ -115,7 +115,7 @@
 
     <section>
         <div class="container text-center my-4">
-            <h3>Web Development Highlights</h3>
+            <h3>Website Highlights</h3>
             <div class="container text-center my-4 conbor">
                 <div id="carouselExampleCaptions" class="carousel slide consol" data-ride="carousel">
                     <ol class="carousel-indicators">
@@ -125,30 +125,40 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <a href="https://microintelligence11.github.io/microintelligence.github.io/"><img
-                                    src="Capture.PNG" class="img-fluid conimg" alt="consol"></a>
+                            <a href="https://microintelligence11.github.io/samplewbsite_1/"><img src="smple_img1.PNG"
+                                    class="img-fluid conimg" alt="consol"></a>
                             <div class="carousel-caption d-none d-md-block">
                                 <h2>
-                                    <p class="prcolor">Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                                    <p class="prcolor">This is a rasturent website sample.</p>
                                 </h2>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <a href="https://microintelligence11.github.io/microintelligence.github.io/"> <img
-                                    src="Capture.PNG" class="img-fluid conimg" alt="consol"></a>
+                            <a href="https://microintelligence11.github.io/samplewbsite_1/"> <img src="smple_img2.PNG"
+                                    class="img-fluid conimg" alt="consol"></a>
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>
+                                    <p class="prcolor">We will host this sample for show the our costumer.</p>
+                                </h2>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <a href="https://microintelligence11.github.io/samplewbsite_1/"> <img src="smple_img3.PNG"
+                                    class="img-fluid conimg" alt="consol"></a>
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>
+                                    <p class="prcolor">Please click any photo and see our sample website in your browser
+                                        now.
+                                    </p>
+                                </h2>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <a href="https://microintelligence11.github.io/samplewbsite_1/"> <img src="smple_img4.PNG"
+                                    class="img-fluid conimg" alt="consol"></a>
                             <div class="carousel-caption d-none d-md-block">
                                 <h2>
                                     <p class="prcolor">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                </h2>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <a href="https://microintelligence11.github.io/microintelligence.github.io/"> <img
-                                    src="Capture.PNG" class="img-fluid conimg" alt="consol"></a>
-                            <div class="carousel-caption d-none d-md-block">
-                                <h2>
-                                    <p class="prcolor">Praesent commodo cursus magna, vel scelerisque nisl consectetur.
-                                    </p>
                                 </h2>
                             </div>
                         </div>
