--- a/web_hosting.html
+++ b/web_hosting.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@500&display=swap" rel="stylesheet">
 
     <title>Services Catalog - Microintelligence</title>
 </head>
@@ -68,18 +68,7 @@
             <hr class="line bg-dark">
 
             <div class="jumbotron">
-                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati iure suscipit, rerum
-                    maxime, asperiores voluptates pariatur amet sit doloremque at, sunt a aliquid laboriosam itaque
-                    minus! Eaque est accusamus repellat dolorem repellendus, corrupti esse fugiat. Ad explicabo
-                    repellendus quaerat, quis quisquam et eveniet sequi sed quae? Expedita vel, dicta eum maiores
-                    nesciunt nisi, neque, rem dolorem officia harum magnam explicabo ipsum officiis atque! Beatae
-                    voluptate non quam impedit cumque consequatur incidunt ipsa omnis repudiandae numquam aut expedita
-                    voluptatibus nam modi, placeat commodi, pariatur molestias aliquid unde obcaecati deserunt qui
-                    asperiores perspiciatis quae. Mollitia aut consequuntur, fugit dolorem dolor pariatur consectetur
-                    minima ad ratione quas? Consectetur odio alias numquam deserunt culpa dolore rem temporibus
-                    voluptatem suscipit eveniet, reiciendis tempore obcaecati reprehenderit recusandae error delectus
-                    fugit corporis minus. Quis animi, alias non molestias deleniti excepturi beatae ad expedita sit
-                    cumque harum vitae quibusdam magnam quo dolore repellat voluptate quos earum qui illum.</p>
+                <p class="lead">Web hosting  is the service of providing storage space for a website or application on a server on the internet. Once your website is made available on the internet, it can be accessed by other computers connected to the internet.There are several ways to host your website: If you have a blog or a small business that is just starting out, Shared Hosting is a good option to start with. It’s the most affordable hosting option available as your server space is shared by other websites.You can think of VPS hosting as a higher, stronger more advanced form of shared hosting. While you do share a server with other websites, you are assigned resources that are not shared with the other properties.</p>
             </div>
         </div>
     </section>
