--- a/android.html
+++ b/android.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@500&display=swap" rel="stylesheet">
 
     <title>Services Catalog - Microintelligence</title>
 </head>
@@ -52,8 +52,7 @@
                     </li>
 
                     <li class="nav-item active">
-                        <a class="nav-link"
-                            href="https://forms.gle/NRxAkxeEnMGFsGyN7">Contact
+                        <a class="nav-link" href="https://forms.gle/NRxAkxeEnMGFsGyN7">Contact
                             US</a>
                     </li>
 
@@ -68,18 +67,10 @@
             <hr class="line bg-dark">
 
             <div class="jumbotron">
-                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati iure suscipit, rerum
-                    maxime, asperiores voluptates pariatur amet sit doloremque at, sunt a aliquid laboriosam itaque
-                    minus! Eaque est accusamus repellat dolorem repellendus, corrupti esse fugiat. Ad explicabo
-                    repellendus quaerat, quis quisquam et eveniet sequi sed quae? Expedita vel, dicta eum maiores
-                    nesciunt nisi, neque, rem dolorem officia harum magnam explicabo ipsum officiis atque! Beatae
-                    voluptate non quam impedit cumque consequatur incidunt ipsa omnis repudiandae numquam aut expedita
-                    voluptatibus nam modi, placeat commodi, pariatur molestias aliquid unde obcaecati deserunt qui
-                    asperiores perspiciatis quae. Mollitia aut consequuntur, fugit dolorem dolor pariatur consectetur
-                    minima ad ratione quas? Consectetur odio alias numquam deserunt culpa dolore rem temporibus
-                    voluptatem suscipit eveniet, reiciendis tempore obcaecati reprehenderit recusandae error delectus
-                    fugit corporis minus. Quis animi, alias non molestias deleniti excepturi beatae ad expedita sit
-                    cumque harum vitae quibusdam magnam quo dolore repellat voluptate quos earum qui illum.</p>
+                <p class="lead">A mobile software application developed for use on devices powered by Google's Android
+                    platform. Android apps are available in the Google Play Store (formerly known as the Android
+                    Market), in the Amazon Appstore and on various Android App-focused sites, and the apps can run on
+                    Android smartphones, tablets, Google TV and other devices. if you required a android app Please Contact Us.</p>
             </div>
         </div>
     </section>
@@ -115,7 +106,7 @@
 
     <!-- Software Highlights section started here  -->
 
-    <section>
+    <!-- <section>
         <div class="container text-center my-4">
             <h3>Android Development Highlights</h3>
             <div class="container text-center my-4 conbor">
@@ -167,15 +158,15 @@
 
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Buying section started here  -->
 
     <section>
         <div class="container text-center automr">
             <h3>You can buy the Android Applications Now !</h3>
-            <a href="https://forms.gle/yPHWh6E1sabREQ4k9"><button type="button"
-                    class="btn btn-outline-dark my-3">Please Click For Buy Software</button></a>
+            <a href="https://forms.gle/yPHWh6E1sabREQ4k9"><button type="button" class="btn btn-outline-dark my-3">Please
+                    Click For Buy Software</button></a>
         </div>
     </section>
 
@@ -191,10 +182,10 @@
                             alt="facebook" class="socialimg"></a>
                     <a href="https://www.instagram.com/_microintelligence_/" class="sociallink"><img src="instagram.png"
                             alt="instagram" class="socialimg"></a>
-                    <a href="https://twitter.com/mic_pvt_ltd" class="sociallink"><img src="twitter.png"
-                            alt="twitter" class="socialimg"></a>
-                    <a href="https://g.page/microintelligence" class="sociallink"><img src="google.png"
-                            alt="google" class="socialimg"></a>
+                    <a href="https://twitter.com/mic_pvt_ltd" class="sociallink"><img src="twitter.png" alt="twitter"
+                            class="socialimg"></a>
+                    <a href="https://g.page/microintelligence" class="sociallink"><img src="google.png" alt="google"
+                            class="socialimg"></a>
 
                 </div>
                 <div class="col-lg-4 col-md-4 col-12 my-4">
