--- a/domain.html
+++ b/domain.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@500&display=swap" rel="stylesheet">
 
     <title>Services Catalog - Microintelligence</title>
 </head>
@@ -52,8 +52,7 @@
                     </li>
 
                     <li class="nav-item active">
-                        <a class="nav-link"
-                            href="https://forms.gle/NRxAkxeEnMGFsGyN7">Contact
+                        <a class="nav-link" href="https://forms.gle/NRxAkxeEnMGFsGyN7">Contact
                             US</a>
                     </li>
 
@@ -68,18 +67,23 @@
             <hr class="line bg-dark">
 
             <div class="jumbotron">
-                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati iure suscipit, rerum
-                    maxime, asperiores voluptates pariatur amet sit doloremque at, sunt a aliquid laboriosam itaque
-                    minus! Eaque est accusamus repellat dolorem repellendus, corrupti esse fugiat. Ad explicabo
-                    repellendus quaerat, quis quisquam et eveniet sequi sed quae? Expedita vel, dicta eum maiores
-                    nesciunt nisi, neque, rem dolorem officia harum magnam explicabo ipsum officiis atque! Beatae
-                    voluptate non quam impedit cumque consequatur incidunt ipsa omnis repudiandae numquam aut expedita
-                    voluptatibus nam modi, placeat commodi, pariatur molestias aliquid unde obcaecati deserunt qui
-                    asperiores perspiciatis quae. Mollitia aut consequuntur, fugit dolorem dolor pariatur consectetur
-                    minima ad ratione quas? Consectetur odio alias numquam deserunt culpa dolore rem temporibus
-                    voluptatem suscipit eveniet, reiciendis tempore obcaecati reprehenderit recusandae error delectus
-                    fugit corporis minus. Quis animi, alias non molestias deleniti excepturi beatae ad expedita sit
-                    cumque harum vitae quibusdam magnam quo dolore repellat voluptate quos earum qui illum.</p>
+                <p class="lead">Domain name is the address of your website that people type in the browser’s URL bar to
+                    visit your website.
+                    In other words, if your website was a house, then your domain name will be its address.
+                    Now let’s get into the detailed explanation.
+                    Internet is basically a giant network of computers connected to each other through cables. To easily
+                    identify them, each computer is assigned a series of numbers called IP Address.
+                    This IP address is a combination of numbers separated with dots. Typically, IP addresses look like
+                    this:
+                    66.249.66.1
+                    Computers have no problem identifying and remembering these numbers. However, it is impossible for
+                    humans to remember and use these numbers to connect to websites on the internet.
+                    To solve this problem, domain names were invented.
+                    A domain name can have words which makes it easy to remember website addresses.
+                    Now if you wanted to visit a website on the internet, you don’t need to type a string of numbers.
+                    Instead, you can type in an easy to remember domain name, for example, wpbeginner.com. So if you
+                    want to host your website and need a one domain Please Contact US.
+                </p>
             </div>
         </div>
     </section>
@@ -174,8 +178,8 @@
     <section>
         <div class="container text-center automr">
             <h3>You can buy the Domain Hosting Now !</h3>
-            <a href="https://forms.gle/yPHWh6E1sabREQ4k9"><button type="button"
-                    class="btn btn-outline-dark my-3">Please Click For Buy Software</button></a>
+            <a href="https://forms.gle/yPHWh6E1sabREQ4k9"><button type="button" class="btn btn-outline-dark my-3">Please
+                    Click For Buy Software</button></a>
         </div>
     </section>
 
@@ -191,10 +195,10 @@
                             alt="facebook" class="socialimg"></a>
                     <a href="https://www.instagram.com/_microintelligence_/" class="sociallink"><img src="instagram.png"
                             alt="instagram" class="socialimg"></a>
-                    <a href="https://twitter.com/mic_pvt_ltd" class="sociallink"><img src="twitter.png"
-                            alt="twitter" class="socialimg"></a>
-                    <a href="https://g.page/microintelligence" class="sociallink"><img src="google.png"
-                            alt="google" class="socialimg"></a>
+                    <a href="https://twitter.com/mic_pvt_ltd" class="sociallink"><img src="twitter.png" alt="twitter"
+                            class="socialimg"></a>
+                    <a href="https://g.page/microintelligence" class="sociallink"><img src="google.png" alt="google"
+                            class="socialimg"></a>
 
                 </div>
                 <div class="col-lg-4 col-md-4 col-12 my-4">
