--- a/domain.html
+++ b/domain.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@500&display=swap" rel="stylesheet">
 
     <title>Services Catalog - Microintelligence</title>
+    <link rel="icon" href="mylogo.png" type="image/png" class="titleimg">
 </head>
 
 <body>
@@ -117,61 +118,6 @@
         </div>
     </section>
 
-    <!-- Software Highlights section started here  -->
-
-    <!-- <section>
-        <div class="container text-center my-4">
-            <h3>Software Highlights</h3>
-            <div class="container text-center my-4 conbor">
-                <div id="carouselExampleCaptions" class="carousel slide consol" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <a href="https://microintelligence11.github.io/microintelligence.github.io/"><img
-                                    src="Capture.PNG" class="img-fluid conimg" alt="consol"></a>
-                            <div class="carousel-caption d-none d-md-block">
-                                <h2>
-                                    <p class="prcolor">Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-                                </h2>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <a href="https://microintelligence11.github.io/microintelligence.github.io/"> <img
-                                    src="Capture.PNG" class="img-fluid conimg" alt="consol"></a>
-                            <div class="carousel-caption d-none d-md-block">
-                                <h2>
-                                    <p class="prcolor">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                </h2>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <a href="https://microintelligence11.github.io/microintelligence.github.io/"> <img
-                                    src="Capture.PNG" class="img-fluid conimg" alt="consol"></a>
-                            <div class="carousel-caption d-none d-md-block">
-                                <h2>
-                                    <p class="prcolor">Praesent commodo cursus magna, vel scelerisque nisl consectetur.
-                                    </p>
-                                </h2>
-                            </div>
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev " href="#carouselExampleCaptions " role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon bg-primary text-primary" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next " href="#carouselExampleCaptions " role="button" data-slide="next">
-                        <span class="carousel-control-next-icon bg-primary text-primary" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-
-            </div>
-        </div>
-    </section> -->
 
     <!-- Buying section started here  -->
 
