--- a/web_development.html
+++ b/web_development.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@500&display=swap" rel="stylesheet">
 
     <title>Services Catalog - Microintelligence</title>
+    <link rel="icon" href="mylogo.png" type="image/png" class="titleimg">
 </head>
 
 <body>
